# tmpl_lib

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  SEQ_LIBRARY_DOCUMENTATION.md  debug_word_align.cpp  test.diff  test_manual.cpp  vector_comparison_demo.cpp
include/: CMakeLists.txt  element_at.h  seq.h  std_array_trick.h  type_map.h  type_value.h
plantuml/: testing.plantuml
test/: CMakeLists.txt  seq_test.cpp  test.cpp  test_check_env.cpp  test_test.cpp  test_type_value.cpp
ut/: CMakeLists.txt
ut/dependencies/: CMakeLists.txt
ut/src/: CMakeLists.txt  element_at.cpp
util_macro/: check_env.h  util_macro.h
